# opencv_tracker

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
src/: precomp.hpp  tldDetector.hpp  trackerKCF.cpp
